Using divs instead weooooo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div id="carousel">
         <ul>
             <li class="pane1">
-            <p>KAN MAN HA MER HÄR?!</p>
-            <p class ="event">Här kan det vara ett event</p>
+            <div>KAN MAN HA MER HÄR?!</div>
+            <div class ="event">Här kan det vara ett event</p>
                 <h2>Swipe...</h2>
             </li>
 
