Added profile images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <div id="carousel">
         <ul>
             <li class="pane1">
-            <div>KAN MAN HA MER HÄR?!</div>
+            <div >KAN MAN HA MER HÄR?!</div>
+            <div >
+	            <img class="profile" src="assets/img/profile/johan.jpg"/>
+	            <img class="profile" src="assets/img/profile/carl.jpg"/>
+	            <img class="profile" src="assets/img/profile/mattias.jpg"/>
+            </div>
             <div class ="event">Här kan det vara ett event</p>
                 <h2>Swipe...</h2>
             </li>
