--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="utf-8">
 </head>
 <body>
 
     <div id="carousel">
         <ul>
             <li class="pane1">
-            <div>KAN MAN HA MER HÄR?!</div>
+            <div class="newevent">+</div>
             <div class ="event">Här kan det vara ett event</p>
                 <h2>Swipe...</h2>
             </li>
