--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
     <title>Hammer.js</title>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
+     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.8/angular.min.js"></script>
+     <script src="assets/js/angular.js"></script>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8">
 </head>
@@ -15,18 +17,25 @@
 
             <div class="newevent">+</div>
 
-            <div >
+            <div class="pictures">
 	            <img class="profile" src="assets/img/profile/johan.jpg"/>
 	            <img class="profile" src="assets/img/profile/carl.jpg"/>
 	            <img class="profile" src="assets/img/profile/mattias.jpg"/>
             </div>
 
-            <div class ="event">Här kan det vara ett event</p>
+            <div class ="event">Här kan det vara ett event</p></div>
                 <h2>Swipe...</h2>
             </li>
 
             <li class="pane2"><h2>...or drag...</h2></li>
-            <li class="pane3"><h2>...or swipe...</h2></li>
+            <li class="pane3">
+                <div class="friends" ng-controller="TodoCtrl">
+                    <p ng-repeat="friend in friends">
+                    <img ng-src="{{friend.img}}" />
+                    {{friend.text}}
+                    </p>
+                </div>
+            </li>
             
         </ul>
     </div>
