--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="carousel">
         <ul>
             <li class="pane1">
-            <div>KAN MAN HA MER HÄR?!</div>
-            <div class ="event">Här kan det vara ett event</p>
-                <h2>Swipe...</h2>
+            <div class ="event">  <h1>AW hos Calleman</h1> </div>  
+            <div class ="eventaccept">  <h1>Spelnight</h1> </div>       
+            <div class ="eventdecline">  <h1>Volleyboll i parken</h1> </div>
             </li>
 
             <li class="pane2"><h2>...or drag...</h2></li>
