--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app>
 <head>
-    <title>Hammer.js</title>
+    <title>Trysh</title>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
     <link href="assets/css/main.css" rel="stylesheet">
@@ -45,7 +45,9 @@
                     <p ng-repeat="friend in friends">
                     <img ng-src="{{friend.img}}" class="profilefriends"/>
                     {{friend.text}}
+                    
                     <input type="checkbox">
+
                     </p>
                 </div>
             </li>
