fortsatt fix på front

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hammer.js</title>
+    <title>TRYSH</title>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
     <link href="assets/css/main.css" rel="stylesheet">
@@ -14,6 +14,8 @@
         <ul>
             <li class="pane1">
 
+
+            <div class ="newevent"> + </div>  
             <div class ="event">  <h1>AW hos Calleman</h1> </div>  
             <div class ="eventaccept">  <h1>Spelnight</h1> </div>       
             <div class ="eventdecline">  <h1>Volleyboll i parken</h1> </div>
@@ -25,10 +27,7 @@
 	            <img class="profile" src="assets/img/profile/johan.jpg"/>
 	            <img class="profile" src="assets/img/profile/carl.jpg"/>
 	            <img class="profile" src="assets/img/profile/mattias.jpg"/>
-            </div>
-
-            <div class ="event">Här kan det vara ett event</p>
-                <h2>Swipe...</h2>-->
+            </div>-->
 
             </li>
 
