--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
             <div class ="newevent"> + </div>  
-            <div class ="event">  <h1>AW hos Calleman</h1> </div>  
+            <div class ="event"><img src="assets/img/profile/carl.jpg" class="profile left" /> <h1 class="right">AW hos Calleman</h1> </div>  
             <div class ="eventaccept">  <h1>Spelnight</h1> </div>       
             <div class ="eventdecline">  <h1>Volleyboll i parken</h1> </div>
 
