--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 
 
             <div class ="newevent"> + </div>  
-            <div class ="event">  <h1>AW hos Calleman</h1> </div>  
+            <div class ="event">  <h1>AW hos Calleman</h1> 
+                <div class = "lefty"></div>
+                <div class = "righty"></div>
+                <div class = "clear"></div>
+     
+            </div> 
+
             <div class ="eventaccept">  <h1>Spelnight</h1> </div>       
             <div class ="eventdecline">  <h1>Volleyboll i parken</h1> </div>
 
