--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 
 
             <div class ="newevent"> + </div>  
-            <div class ="event"><img src="assets/img/profile/carl.jpg" class="profile left" /> <h1 class="right">AW hos Calleman</h1> </div>  
+            <div class ="event">
+                            <div class = "lefty">
+<img src="assets/img/profile/carl.jpg" class="profile left"/> 
+            <h1>Afterwork med bärs!</h1>
+            <p>17:00 Fräcka Fröken</p> 
+            <img src="assets/img/profile/mattias.jpg" class="profile left attending" />
+            <img src="assets/img/profile/johan.jpg" class="profile left attending" />
+            <img src="assets/img/profile/mattias.jpg" class="profile left notattending" />
+            <img src="assets/img/profile/johan.jpg" class="profile left notattending" />   
+            </div>   <div class = "righty"> </div> <div class = "clear"></div>
             <div class ="eventaccept">  <h1>Spelnight</h1> </div>       
             <div class ="eventdecline">  <h1>Volleyboll i parken</h1> </div>
 
