Event description view

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li class="pane1">
 
-            <div class ="event">  <h1>AW hos Calleman</h1> </div>  
+            <div class ="event">  <h1>AW hos Calleman</h1> </div>
             <div class ="eventaccept">  <h1>Spelnight</h1> </div>       
             <div class ="eventdecline">  <h1>Volleyboll i parken</h1> </div>
 
@@ -32,7 +32,32 @@
 
             </li>
 
-            <li class="pane2"><h2>...or drag...</h2></li>
+            <li class="pane2">
+	        	<div class="wrapper1">
+		            	<div class="activity-header">
+		            		<h1>AW hos Calleman</h1>
+		            	</div>
+
+		            	<div class="activity-icon">
+		            	<img class="profile" src="http://www.gq.com/images/food-and-travel/2011/05/beer-glasses/shaker-pint.jpg"/>
+		            	</div>
+
+		            	<div class="clear"></div>
+		        </div>
+		        <div class="wrapper2">
+		        	
+		        	<div class="desctiption-img">
+		        		<img class="profile" src="assets/img/profile/carl.jpg" />
+		        	</div>
+
+	   				<div class="description-text">
+	            		<p class="bubble">Ta med öl för fasen"</p>
+	            	</div>
+
+	            	<div class="clear"></div>
+	            </div>
+        	</li>
+
             <li class="pane3"><h2>...or swipe...</h2></li>
             
         </ul>
