--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <img src="assets/img/profile/johan.jpg" class="profile left notattending" />   
                 </div>
                 <div class = "righty"> 
-                 <img src="assets/img/profile/mattias.jpg" class="profile">
-                  <img src="assets/img/profile/mattias.jpg" class="profile">   
+                 <img src="assets/img/confirm.png" class="profile">
+                  <img src="assets/img/deny.png" class="profile">   
                 </div> 
                 <div class = "clear"></div>
                 </div>
@@ -48,8 +48,8 @@
                 <img src="assets/img/profile/johan.jpg" class="profile left notattending" />   
                 </div>
                 <div class = "righty"> 
-                 <img src="assets/img/profile/mattias.jpg" class="profile">
-                  <img src="assets/img/profile/mattias.jpg" class="profile">   
+                 <img src="assets/img/confirm.png" class="profile">
+                  <img src="assets/img/deny.png" class="profile">   
                 </div> 
                 <div class = "clear"></div>
             </div>       
@@ -67,8 +67,8 @@
                 <img src="assets/img/profile/johan.jpg" class="profile left notattending" />   
                 </div>
                 <div class = "righty"> 
-                 <img src="assets/img/profile/mattias.jpg" class="profile">
-                  <img src="assets/img/profile/mattias.jpg" class="profile">   
+                 <img src="assets/img/confirm.png" class="profile">
+                  <img src="assets/img/deny.png" class="profile">   
                 </div> 
                 <div class = "clear"></div>
 
