--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li class="pane1">
 
-            <div class ="newevent"> + </div>  
+            <div class ="newevent"> <p>+</p> </div>  
             <div class ="event">
                 <div class="lefty" >       
                 <img src="assets/img/profile/carl.jpg" class="profile left"/> 
