skitfixar hatar detta

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <li class="pane2">
 	        	<div class="wrapper1">
 		            	<div class="activity-header">
-		            		<h1>AW hos Calleman</h1>
+		            		<h1>Afterwork</h1>
 		            	</div>
 
 		            	<div class="activity-icon">
@@ -90,25 +90,23 @@
 		        </div>
 		        <div class="wrapper2">
 		        	
-		        	<div class="desctiption-img">
-		        		<img class="profile" src="assets/img/profile/carl.jpg" />
+		        	<div class="description-img">
+		        		<img class="profile tryckner" src="assets/img/profile/carl.jpg" />
 		        	</div>
 
 	   				<div class="description-text">
-	            		<p class="bubble">Ta med öl för fasen"</p>
+	            		<p class="bubble">Ta med öl för fasen</p>
 	            	</div>
 
 	            	<div class="clear"></div>
 	            </div>
-
                 <div class="wrapper3">
-                    <div class="friends" ng-controller="TodoCtrl">
+                     <div class="friends" ng-controller="TodoCtrl">
                     <p ng-repeat="friend in friends">
                     <img ng-src="{{friend.img}}" class="profilefriends"/>
                     {{friend.text}}
                     </p>
-                </div>
-
+                    </div>
                 </div>
         	</li>
 
