fixar med den andra

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		        </div>
 		        <div class="wrapper2">
 		        	
-		        	<div class="description-img">
+		        	<div class="description-img profile">
 		        		<img class="profile tryckner" src="assets/img/profile/carl.jpg" />
 		        	</div>
 
